# gitkay

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: gitkay.spec
packaging/debian/: changelog  control  copyright  rules
src/: main.rs
