[package]
name = "gitkay"
version = "1.0.0"
edition = "2024"
description = "A fast, native Wayland git history viewer — gitk, but okay"
license = "MIT"
repository = "https://github.com/Marenz/gitkay"
keywords = ["git", "history", "viewer", "wayland", "egui"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = "0.31"
egui = "0.31"
git2 = "0.19"
chrono = "0.4"
arboard = "3"
